@@ -458,6 +458,16 @@
 	    </para>
 	  </listitem>  
 	</varlistentry>
+	<varlistentry>
+	  <term><option>header_replace</option></term>
+	  <listitem>
+	    <para>
+	      String used to replace occurence of the character at odd place
+	      with character at even place. For example specifiing "._Aa" will
+	      replace all "." with "_" and all "A" with "a". Defaults to empty string.
+	    </para>
+	  </listitem>
+	</varlistentry>
       </variablelist>
     </refsect2>
     <refsect2>
