@@ -1,3 +1,6 @@
+2012-12-20
+ * replacing wrong characters in FITS header
+
 2012-11-29
  * timeseries (trending)
 
